--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "method-override": "^2.3.10",
     "errorhandler": "^1.5.1",
     "express-session": "^1.16.2",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+	"moment":"^2.20.1"
   }
 }
