--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "bintlab.sarl",
   "license": "ISC",
   "engines": {
-    "node": "10.15.1"
+    "node": "10.15.1",
+	"npm":"7.0.0"
   },
   "dependencies": {
     "mongoose": "5.0.0",
